package exercise.ex01.codes.before;

public class BasicEmailContent {

    private String content;

    public BasicEmailContent(String content) {
        this.content = content;
    }

    public String getContent() {
        return content;
    }

}
